Added text and buttons for both index and game.html

--- a/game.html
+++ b/game.html
@@ -10,7 +10,14 @@
     <title>Jean's Movie Trivia Game</title>
 </head>
 <body>
-
+<div class="">
+        <ul>
+            <button id="button1">info1</button>
+            <button id="button2">info2</button>
+            <button id="button3">info3</button>
+            <button id="button4">info4</button>
+        </ul>
+    </div>
 </div>
     </body>
 <script src="javascript.js"></script>
