--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <title>Jean's Movie Trivia Game</title>
 </head>
 <body>
-
+    <h1>Welcome to Jean's Movie Trivia Game!</h1>
+    <p class="introP">Once you press "start", you will have 6-7 seconds to answer each question, Ready?</p>
+    <div class="button">
+        <ul>
+            <li>START</li>
+        </ul>
+    </div>
 </body>
 <script src="javascript.js"></script>
 </html>
